--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI = mongodb://localhost:27017/GlobusIt
+MONGODB_URI = mongodb+srv://singareddy99ashritha:Anoop_2687@cluster0.kbiptof.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/GlobusIt
 JWT_SECRET = GlobusIt@123456789@
 PORT= 5006
