--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI = mongodb+srv://singareddy99ashritha:Anoop_2687@cluster0.kbiptof.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0/hrms
 JWT_SECRET = GlobusIt@123456789@
 PORT= 5006
+BASE = "http://globusit-env.eba-5wfvbmm7.ap-south-1.elasticbeanstalk.com"
